# mcstPreWork

./: README.md
10(logic_parser)/: CMakeLists.txt
10(logic_parser)/logic_statement_parts/: logic_operand.h  operand.h
10(logic_parser)/parser/: parser.cpp  parser.h
